<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<EditText
		android:id="@+id/phoneNumberTF"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:hint="@string/tf_hint_1"
		android:inputType="phone" />
	<Button
		android:text="@string/btn_label_1"
		android:id="@+id/testFakeCallBtn"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:onClick="testFakeCall" />

	<EditText
		android:id="@+id/ditTF"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:hint="@string/tf_hint_2"
		android:inputType="number" />
	<EditText
		android:id="@+id/dahTF"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:hint="@string/tf_hint_3"
		android:inputType="number" />
	<EditText
		android:id="@+id/ddgapTF"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:hint="@string/tf_hint_4"
		android:inputType="number" />
	<EditText
		android:id="@+id/lgapTF"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:hint="@string/tf_hint_5"
		android:inputType="number" />
	<EditText
		android:id="@+id/wgapTF"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:hint="@string/tf_hint_6"
		android:inputType="number" />
	<Button
		android:text="@string/btn_label_2"
		android:id="@+id/savePreferencesBtn"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:onClick="savePreferences" />
</LinearLayout>
